new sections have been added

--- a/index.html
+++ b/index.html
@@ -282,7 +282,68 @@
     </section>
 
     <section>
+        <h3 class="text-center">Shop by Price</h3>
+        <div class="container contimgs">
+            <div class="container-fluid cf1">
+                <img src="https://www.giva.co/cdn/shop/files/999.jpg?v=1736767606&width=1500" alt="">
+            </div>
+            <div class="container-fluid cf1">
+                <img src="https://www.giva.co/cdn/shop/files/2999.jpg?v=1736767606&width=1500" alt="">
+            </div>
+            <div class="container-fluid cf1">
+                <img src="https://www.giva.co/cdn/shop/files/4999.jpg?v=1736767606&width=1500" alt="">
+            </div>
+            <div class="container-fluid sp cf1">
+                <img src="https://www.giva.co/cdn/shop/files/Premium.jpg?v=1736767607&width=1500" alt="">
+            </div>
 
+        </div>
+    </section>
+
+    <section>
+        <h3 class="text-center">Lifetime Memories</h3>
+        <div class="container contimgs">
+            <div class="container-fluid cfimg1">
+                <img src="https://www.giva.co/cdn/shop/files/Convertible_Bracelets_1.jpg?v=1736771884&width=1500" alt="">
+            </div>
+            <div class="container-fluid cfimg2">
+                <img src="https://www.giva.co/cdn/shop/files/Personalised_Gifts_1.jpg?v=1736771884&width=1500" alt="">
+            </div>
+        </div>
+
+    </section>
+
+    <section class="singleimg">
+        <div class="container mx-1 my-1 onlycont1">
+            <div class="container-fluid onlycont">
+
+                <img src="https://www.giva.co/cdn/shop/files/Gift_Boxes_1.jpg?v=1736771884&width=1500" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="text-center">Gifting Guide</h2>
+        <div class="container   famcont">
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Mother.png?v=1736767607&width=300" alt="">
+            </div>
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Brother.png?v=1736767607&width=300" alt="">
+            </div>
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Sister.png?v=1736767607&width=300" alt="">
+            </div>
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Husband.png?v=1736767607&width=300" alt="">
+            </div>
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Wife.png?v=1736767608&width=300" alt="">
+            </div>
+            <div class="container-fluid cf1img">
+                <img src="https://www.giva.co/cdn/shop/files/Friends.png?v=1736767607&width=300" alt="">
+            </div>
+        </div>
     </section>
 
 
